--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -6,9 +6,9 @@ layout: null
 
 <?xml version="1.0" encoding="utf-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
-  <% collections.all.forEach((page) => { %>
+  {% for page in collections.all %}
   <url>
-    <loc><%= `${site.url}${page.url}` %></loc>
+    <loc>{{ site.url }}{{ page.url | url }}</loc>
   </url>
-  <% }) %>
+  {% endfor %}
 </urlset>
