--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicon-32x32.png' | url }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | url }}">
     <link rel="icon" href="{{ '/favicon.ico' | url }}">
-    <title>{{ title }} - {{ site.title }}</title>
+    <title>{{ title }}</title>
     <meta name="description" content="{{ site.description }}">
     {% include './webpack.ejs' %}
   </head>
